Squash merge test/v2 into stage